Move into correct package

--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>main.java.proxy.Proxy</mainClass>
+                            <mainClass>proxy.Proxy</mainClass>
                             <classpathPrefix>dependency-jars/</classpathPrefix>
                         </manifest>
                     </archive>
