--- a/pom.xml
+++ b/pom.xml
@@ -53,8 +53,14 @@
             <version>1.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
 
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
