--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,9 +1,8 @@
 proxy {
-    listen {
-        port = 7500
-    }
+  useCompression = true
+}
 
-    forward {
-        port = 7501
-    }
+network {
+  hostname = "http://0.0.0.0:3000"
+  proxyHostname = "http://localhost:4001"
 }
