Error handling, logging and started with AMQP support

--- a/src/main/resources/proxy1.conf
+++ b/src/main/resources/proxy1.conf
@@ -1,10 +1,10 @@
 proxy {
   useCompression = false
-  protocol = "amqp"
+  protocol = "http"
 }
 
 network {
   hostname = "http://0.0.0.0:3001"
   proxyHostname = "http://localhost:4001"
-  brokerConnectionUri = "amqp://vor.ifi.uio.no:5672"
+  brokerConnectionUri = "amqp://justitia.ifi.uio.no:5672"
 }
