--- a/src/main/resources/proxy2.conf
+++ b/src/main/resources/proxy2.conf
@@ -1,9 +1,10 @@
 proxy {
   useCompression = false
-  protocol = "amqp"
+  protocol = "http"
 }
 
 network {
   hostname = "http://0.0.0.0:4001"
   proxyHostname = "http://localhost:3001"
+  brokerConnectionUri = "amqp://justitia.ifi.uio.no:5672"
 }
