Working AMQP imlementation

--- a/src/main/resources/proxy2.conf
+++ b/src/main/resources/proxy2.conf
@@ -1,10 +1,15 @@
 proxy {
   useCompression = false
-  protocol = "http"
+  protocol = "amqp"
 }
 
 network {
   hostname = "http://0.0.0.0:4001"
   proxyHostname = "http://localhost:3001"
+}
+
+amqp {
   brokerConnectionUri = "amqp://justitia.ifi.uio.no:5672"
+  produceQueue = 3001
+  consumeQueue = 4001
 }
