--- a/src/main/resources/proxy1.conf
+++ b/src/main/resources/proxy1.conf
@@ -1,10 +1,15 @@
 proxy {
   useCompression = false
-  protocol = "http"
+  protocol = "amqp"
 }
 
 network {
   hostname = "http://0.0.0.0:3001"
   proxyHostname = "http://localhost:4001"
+}
+
+amqp {
   brokerConnectionUri = "amqp://justitia.ifi.uio.no:5672"
+  produceQueue = 4001
+  consumeQueue = 3001
 }
