--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,13 @@
             <version>4.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20151123</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
