--- a/src/main/resources/proxy1.conf
+++ b/src/main/resources/proxy1.conf
@@ -4,8 +4,8 @@ proxy {
 }
 
 network {
-  hostname = "http://0.0.0.0:3001"
-  proxyHostname = "http://localhost:4001"
+  hostname = "0.0.0.0:3001"
+  proxyHostname = "localhost:4001"
 }
 
 amqp {
