--- a/src/main/resources/proxy2.conf
+++ b/src/main/resources/proxy2.conf
@@ -4,8 +4,8 @@ proxy {
 }
 
 network {
-  hostname = "http://0.0.0.0:4001"
-  proxyHostname = "http://localhost:3001"
+  hostname = "0.0.0.0:4001"
+  proxyHostname = "localhost:3001"
 }
 
 amqp {
