--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,14 @@
         <camel.version>2.16.1</camel.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>repo.eclipse.org</id>
+            <name>Californium Repository</name>
+            <url>https://repo.eclipse.org/content/repositories/californium/</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.camel</groupId>
@@ -87,6 +95,11 @@
             <version>20151123</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.eclipse.californium</groupId>
+            <artifactId>californium-core</artifactId>
+            <version>1.0.0</version>
+        </dependency>
 
     </dependencies>
 
