Add protocol timeout to config.
Currently only used for CoAP

--- a/configs/coap_4001.conf
+++ b/configs/coap_4001.conf
@@ -3,6 +3,8 @@ proxy {
   protocol = "coap"
   hostname = "0.0.0.0"
   port = 4001
+  timeout = 20000
+
 
   targetProxyHostname = "localhost:3001"
 }
