--- a/configs/coap_3001.conf
+++ b/configs/coap_3001.conf
@@ -3,6 +3,7 @@ proxy {
   protocol = "coap"
   hostname = "0.0.0.0"
   port = 3001
+  timeout = 20000
 
   targetProxyHostname = "localhost:4001"
 }
