--- a/configs/http_3001.conf
+++ b/configs/http_3001.conf
@@ -3,6 +3,6 @@ proxy {
   protocol = "http"
   hostname = "0.0.0.0"
   port = 3001
-
+  redeliverDelay = 5000
   targetProxyHostname = "localhost:4001"
 }
