--- a/configs/http_4001.conf
+++ b/configs/http_4001.conf
@@ -3,6 +3,7 @@ proxy {
   protocol = "http"
   hostname = "0.0.0.0"
   port = 4001
+  redeliverDelay = 5000
 
   targetProxyHostname = "localhost:3001"
 }
