Move common config options inte the reference config

--- a/configs/http_3001.conf
+++ b/configs/http_3001.conf
@@ -4,5 +4,5 @@ proxy {
   hostname = "0.0.0.0"
   port = 3001
   redeliverDelay = 5000
-  targetProxyHostname = "localhost:4001"
+  targetProxyHostname = "192.168.10.10:4001"
 }
