--- a/src/main/resources/proxy1.conf
+++ b/src/main/resources/proxy1.conf
@@ -1,24 +1,3 @@
 proxy {
-  useCompression = false
-  protocol = "coap"
-}
-
-network {
-  hostname = "0.0.0.0:3001"
-  proxyHostname = "localhost:4001"
-}
-
-amqp {
-  brokerConnectionUri = "amqp://justitia.ifi.uio.no:5672"
-  produceQueue = 4001
-  consumeQueue = 3001
-}
-
-mqtt {
-  produceQueue = 4001
-  consumeQueue = 3001
-}
-
-coap {
-  listenPort = 3001
+  targetProxyHostname = "localhost:4001"
 }
