--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,10 +1,7 @@
 proxy {
-  useCompression = false
-  protocol = "amqp"
+  targetProxyHostname = "localhost:4001"
 }
 
-network {
-  hostname = "http://0.0.0.0:3001"
-  proxyHostname = "http://localhost:4001"
-  brokerConnectionUri = "amqp://vor.ifi.uio.no:5672"
+amqp {
+  brokerConnectionUri = "amqp://192.168.10.10:5672"
 }
