--- a/configs/amqp_3001_compression.conf
+++ b/configs/amqp_3001_compression.conf
@@ -1,9 +1,10 @@
 proxy {
-  useCompression = false
+  useCompression = true
   protocol = "amqp"
   hostname = "0.0.0.0"
   port = 3001
   timeout = 40000
+
 }
 
 amqp {
