--- a/configs/amqp_4001.conf
+++ b/configs/amqp_4001.conf
@@ -1,5 +1,5 @@
 proxy {
-  useCompression = true
+  useCompression = false
   protocol = "amqp"
   hostname = "0.0.0.0"
   port = 4001
@@ -8,7 +8,6 @@ proxy {
 }
 
 amqp {
-  brokerConnectionUri = "amqp://vor.ifi.uio.no:5672"
   produceQueue = 3001
   consumeQueue = 4001
 }
