--- a/configs/http_3001.conf
+++ b/configs/http_3001.conf
@@ -3,5 +3,8 @@ proxy {
   protocol = "http"
   hostname = "0.0.0.0"
   port = 3001
-  redeliverDelay = 5000
+  redeliverDelay = 2000
+  maximumRedeliveries = 10
+  useExponentialBackOff = false
+  backOffMultiplier = 2
 }
