--- a/configs/coap_3001.conf
+++ b/configs/coap_3001.conf
@@ -1,7 +1,8 @@
 proxy {
+  targetProxyHostname = "localhost:4001"
   useCompression = false
   protocol = "coap"
   hostname = "0.0.0.0"
   port = 3001
-  timeout = 200000
+  timeout = 2000
 }
