--- a/configs/coap_3001.conf
+++ b/configs/coap_3001.conf
@@ -1,5 +1,5 @@
 proxy {
-  targetProxyHostname = "localhost:4001"
+  targetProxyHostname = "192.168.10.10:4001"
   useCompression = false
   protocol = "coap"
   hostname = "0.0.0.0"
